output/GluGlu_Radion_tauTau_2018/err/file_3320371.24.err
  File "/afs/cern.ch/work/v/vdamante/public/analysis/triggerStudiesAnalysis.py", line 1307
    baseline_paths_dict['2016']['muTau']['iter_1'].extend([baseline_paths_dict['2016']['muTau']['baseline'])
                                                                                                           ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '['
